Fixed alignment issue

--- a/grubmenow-webapp/src/main/webapp/webassets/app.css
+++ b/grubmenow-webapp/src/main/webapp/webassets/app.css
@@ -98,7 +98,7 @@ a:active {
 
 .qtyBox {
      width: 50px;
-     margin-right: 5px;
+     margin-left: 5px;
      padding: 2px; 
 }
 
